test: add service/web integration tests; docs: OpenAPI annotations; chore: Flyway V1/V2 & test hardening